<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.8</version>
        <relativePath />
    </parent>

    <groupId>edu.kit.iai.webis.proof</groupId>
    <artifactId>proof-orchestrator</artifactId>
    <version>1.2.0</version>
    <name>PROOF Orchestrator</name>
    <description>PROOF Orchestrator</description>
    <packaging>jar</packaging>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gitHost>github.com/</gitHost>
        <gitUserId>KIT-IAI-PROOF</gitUserId>
        <gitRepoId>proof-orchestrator</gitRepoId>
        <model.version>1.0.0</model.version>
        <config.manager.version>1.2.0</config.manager.version>
    </properties>

    <dependencies>
		<dependency>
            <groupId>edu.kit.iai.webis.proof</groupId>
            <artifactId>config-manager-client</artifactId>
            <version>${config.manager.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-messaging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>edu.kit.iai.webis.proof</groupId>
            <artifactId>proof-utils</artifactId>
	    	<version>1.0.0</version>
        </dependency>
		<!-- Spring starters -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-amqp</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-resolver-dns-native-macos</artifactId>
            <classifier>osx-aarch_64</classifier>
            <version>4.1.112.Final</version>
        </dependency>
		<!-- OpenAPI -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.3.0</version>
        </dependency>
		<!-- Additional stuff -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.docker-java</groupId>
            <artifactId>docker-java</artifactId>
            <version>3.5.3</version>
        </dependency>
        <dependency>
            <groupId>com.github.docker-java</groupId>
            <artifactId>docker-java-transport-httpclient5</artifactId>
            <version>3.5.3</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.amqp</groupId>
            <artifactId>spring-rabbit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
            <version>2.12.0</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.11.0</version>
        </dependency>
        <dependency>
            <groupId>io.kubernetes</groupId>
            <artifactId>client-java</artifactId>
            <version>24.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <excludes>
                        <exclude>generated/**</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>-ea -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.5.8</version>
                <configuration>
                    <jmxPort>9009</jmxPort>
                    <jvmArguments>-ea -XX:+EnableDynamicAgentLoading -Xshare:off</jvmArguments>
                    <mainClass>edu.kit.iai.webis.prooforchestrator.App</mainClass>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <configuration>
                            <profiles>test</profiles>
                            <jvmArguments>-ea -XX:+EnableDynamicAgentLoading -Xshare:off</jvmArguments>
                        </configuration>
                        <goals>
                            <goal>start</goal>
                            <goal>stop</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-maven-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <apiDocsUrl>http://localhost:8200/v3/api-docs</apiDocsUrl>
                            <outputFileName>api.json</outputFileName>
                            <outputDir>${project.build.directory}</outputDir>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>7.10.0</version>
                <executions>
                    <execution>
                        <id>gen-typescript</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <verbose>false</verbose>
                            <cleanupOutput>true</cleanupOutput>
                            <enablePostProcessFile>true</enablePostProcessFile>
                            <inputSpec>${project.build.directory}/api.json</inputSpec>
                            <output>${project.basedir}/generated/typescript</output>
                            <generatorName>typescript-axios</generatorName>
                            <gitHost>${gitHost}</gitHost>
                            <gitUserId>${gitUserId}</gitUserId>
                            <gitRepoId>${gitRepoId}</gitRepoId>
                            <additionalProperties>
                                <additionalProperty>apiPackage=api</additionalProperty>
                                <additionalProperty>modelPackage=model</additionalProperty>
                                <additionalProperty>withSeparateModelsAndApi=true</additionalProperty>
                                <additionalProperty>supportsES6=true</additionalProperty>
                                <additionalProperty>withInterfaces=true</additionalProperty>
                                <additionalProperty>npmVersion=${project.version}</additionalProperty>
                                <additionalProperty>npmName=@kit-iai-proof/proof-orchestrator-client</additionalProperty>
                            </additionalProperties>
                        </configuration>
                    </execution>
                    <execution>
                        <id>gen-java</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <verbose>false</verbose>
                            <cleanupOutput>true</cleanupOutput>
                            <enablePostProcessFile>true</enablePostProcessFile>
                            <inputSpec>${project.build.directory}/api.json</inputSpec>
                            <output>${project.basedir}/generated/java</output>
                            <library>webclient</library>
                            <generatorName>java</generatorName>
                            <gitHost>${gitHost}</gitHost>
                            <gitUserId>${gitUserId}</gitUserId>
                            <gitRepoId>${gitRepoId}</gitRepoId>
                            <artifactId>orchestrator-client</artifactId>
                            <groupId>edu.kit.iai.webis.proof</groupId>
                            <artifactVersion>${project.version}</artifactVersion>
                            <apiPackage>edu.kit.iai.webis.proofapi</apiPackage>
                            <modelPackage>edu.kit.iai.webis.proofmodels</modelPackage>
                            <additionalProperties>
                                <additionalProperty>annotationLibrary=swagger2</additionalProperty>
                                <additionalProperty>serializationLibrary=jackson</additionalProperty>
                            </additionalProperties>
                        </configuration>
                    </execution>
                    <execution>
                        <id>gen-python</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <generateApis>false</generateApis>
                            <generateModels>true</generateModels>
                            <verbose>false</verbose>
                            <cleanupOutput>true</cleanupOutput>
                            <enablePostProcessFile>true</enablePostProcessFile>
                            <inputSpec>${project.build.directory}/api.json</inputSpec>
                            <output>${project.basedir}/generated/python</output>
                            <generatorName>python</generatorName>
                            <gitHost>${gitHost}</gitHost>
                            <gitUserId>${gitUserId}</gitUserId>
                            <gitRepoId>${gitRepoId}</gitRepoId>
                            <gitHost>gitlab.kit.edu</gitHost>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>3.4.6</version>
                <configuration>
                    <container>
                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                    </container>
                    <from>
                        <image>eclipse-temurin:21</image>
                    </from>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>github-proof</id>
            <url>https://maven.pkg.github.com/KIT-IAI-PROOF</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>github-proof</id>
            <url>https://maven.pkg.github.com/KIT-IAI-PROOF/proof-orchestrator</url>
        </repository>
    </distributionManagement>

</project>
